FmComms_Lan/fmcomms1_zed.sdk/.metadata/.plugins/org.eclipse.cdt.ui/fmcomms_lan.build.log
09:41:34 **** Auto Build of configuration Debug for project fmcomms_lan ****
make all 
'Building file: ../src/Common/recive_lan_callback.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD8366" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9122" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9523" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9548" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9643" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\ADF4351" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\Common" -c -fmessage-length=0 -MT"src/Common/recive_lan_callback.o" -I../../fmcomms_lan_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/Common/recive_lan_callback.d" -MT"src/Common/recive_lan_callback.d" -o "src/Common/recive_lan_callback.o" "../src/Common/recive_lan_callback.c"
../src/Common/recive_lan_callback.c: In function 'recv_callback':
../src/Common/recive_lan_callback.c:77:5: error: 'flag' undeclared (first use in this function)
     flag++;
     ^
../src/Common/recive_lan_callback.c:77:5: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/Common/recive_lan_callback.o] Error 1

09:41:34 Build Finished (took 399ms)

